<resources>
    <string name="app_name">Github User</string>

    <string name="followers">Followers </string>
    <string name="following">Following </string>
    <string name="name">Name :</string>
    <string name="location">Location :</string>
    <string name="bio">Bio :</string>
    <string name="company">Company :</string>
    <string name="share">Share</string>
    <string name="smaple">sample</string>
    <string name="favorite_user">Favorite User</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user_image">User Image</string>
    <string name="github_user_mainac">Github User</string>
</resources>