<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:contentDescription="@string/user_image"
            android:layout_width="130dp"
            android:layout_height="129dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.719"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/smaple"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_share"
            app:layout_constraintVertical_bias="0.037" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="149dp"
            android:layout_height="22dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/tv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/smaple" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.428" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/tv_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="149dp"
            android:layout_height="21dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/tv_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/smaple" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="21dp"
            android:layout_marginStart="184dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_company"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.266" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/smaple" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="44dp"
            android:text="@string/followers"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toEndOf="@+id/btn_share"
            app:layout_constraintTop_toTopOf="@+id/tv_company" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_share"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:text="@string/smaple" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="43dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="27dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.704"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:text="@string/smaple" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange"
            android:text="@string/share"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tog_favorit"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:maxLines="@integer/material_motion_duration_long_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/btn_share"
            tools:text="@string/smaple" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="-1dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table" />

        <ToggleButton
            android:id="@+id/tog_favorit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/toggle_fav"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar"
            tools:ignore="TouchTargetSizeCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.418"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.597"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>